# advent-of-code

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
2015/: Cargo.toml  README.md
2015/day_02/src/: lib.rs  main.rs
2015/day_03/: Cargo.toml
2015/day_03/src/: lib.rs  main.rs
2015/day_04/: Cargo.toml
2015/day_04/src/: lib.rs  main.rs
2015/src/: main.rs  template.txt
2024/: Cargo.toml  README.md
2024/day_01/: Cargo.toml
2024/day_01/src/: main.rs
2024/day_02/: Cargo.toml
2024/day_02/src/: main.rs
2024/src/: main.rs  template.txt
2025/: Cargo.toml  README.md
2025/src/: main.rs  template.txt
common/src/: lib.rs
day_01/src/: lib.rs  main.rs
day_02/: Cargo.toml
day_02/src/: lib.rs  main.rs
day_03/src/: lib.rs  main.rs
day_04/src/: lib.rs  main.rs
day_06/: Cargo.toml
day_06/src/: lib.rs  main.rs
day_07/src/: lib.rs  main.rs
day_08/src/: lib.rs  main.rs
day_11/src/: main.rs
src/: lib.rs  main.rs  template.txt
src/template/: aoc_cli.rs  day.rs  mod.rs  year.rs
src/template/commands/: download.rs  mod.rs  read.rs  scaffold.rs
src/util/: vec2.rs
src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
src/year2024/: day01.rs  day02.rs
src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
