[package]
name = "aoc"
version = "0.1.0"
authors = ["Samuel O'Malley <git@sam.omalley.cc>"]
edition = "2024"
default-run = "aoc"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
tinyjson = "2.5.1"
rayon = "1.11.0"
cached = "0.56.0"
ilog = "1.0.1"
itertools = "0.14.0"
z3 = "0.19.5"
petgraph = "0.8.3"
md5 = "0.8.0"
fancy-regex = "0.17.0"
regex = "1.12.2"
serde_json = "1.0.145"
